# lcdmonitor

./: .gitignore  AGENTS.md  Makefile  PROJECT_PLAN.md  README.md  TASKS.md  config.toml
.github/: python.yml
.github/workflows/: arduino.yml  python.yml
arduino/: platformio.ini
arduino/include/: RotaryEncoder.h  ScrollBuffer.h  config.h
arduino/src/: RotaryEncoder.cpp  main.cpp
arduino/test/test_scroll_buffer/: test_scroll_buffer.cpp
docs/: codex-howto.md  codex-playbook.md  deployment-systemd.md  wiring.md
docs/adr/: 0001-protocol.md  0002-arduino-heartbeat-leds.md
infra/systemd/: lcdmonitor.service  lcdmonitor.system.service
scripts/: install_system_service.sh
server/: config.example.yaml  pyproject.toml
server/src/: config.py  main.py  metrics.py  mock_sender.py  protocol.py
server/src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/tests/: conftest.py  test_commands.py  test_config.py  test_daemon_dry_run.py  test_exec.py  test_gpu_fallback.py  test_smoke.py  test_validation.py
